--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "styled-components": "^5.3.6",
+    "use-context-selector": "^1.4.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
